--- a/src/theme/default/index.less
+++ b/src/theme/default/index.less
@@ -1,3 +1,15 @@
 @import "color";
 @import "style";
 @import "nprogress";
+
+.keyframes(@name; @arguments) {
+  @-moz-keyframes @name { @arguments(); }
+  @-webkit-keyframes @name { @arguments(); }
+  @keyframes @name { @arguments(); }
+}
+
+.animation(@arguments) {
+  -webkit-animation: @arguments;
+  -moz-animation: @arguments;
+  animation: @arguments;
+}
